Bug 293708 - Can't paint on duplicated layer
Summary: Can't paint on duplicated layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Unlisted Binaries Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 323833 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-09 12:20 UTC by Stepan
Modified: 2013-09-26 13:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stepan 2012-02-09 12:20:09 UTC
Version:           2.4-snapshots
OS:                MS Windows

I can't paint on duplicated layer while the original layer keeps that possibility. 

Reproducible: Didn't try

Steps to Reproduce:
I'm duplicating layer  and i can't paint on it. After relaunching Krita this possibility appears 


Expected Results:  
Should be editable immediately after duplicating
Comment 1 Halla Rempt 2012-02-09 15:38:59 UTC
Hi Stepan,

Thanks for your report. I can't check until I come home tomorrow from a business trip -- I've only got my Linux laptop with me :-). On linux I don't have a problem.
Comment 2 Halla Rempt 2012-02-11 13:24:25 UTC
I can confirm on windows -- now I need to build it with the latest changes and check if it still happens.
Comment 3 Halla Rempt 2012-02-19 12:07:40 UTC
Yes, still happens with all the current changes. Very weird.
Comment 4 Halla Rempt 2012-02-29 14:50:17 UTC
And only on Windows :-(
Comment 5 Halla Rempt 2012-04-05 12:32:46 UTC
Hm, looking into it a bit deeper, it seems that I can paint and work with a duplicated layer if I duplicate a layer with actual content, not just an empty layer.
Comment 6 Halla Rempt 2012-07-31 08:56:31 UTC
Interesting... This only happens on Windows when Krita is compiled with MSCV 2010. With Intel Composer 2011, the bug doesn't happen. I'm going to try to create new packages with icl.exe instead of mscv.
Comment 7 yustas 2013-01-02 13:17:42 UTC
There is a way to resolve this Windows bug partially: ctrl + A (select all) and ctrl + alt + J (copy selection to new layer). Unfortunately in this case you lost the overconvassize pixels.
Comment 8 Sven Langkamp 2013-08-21 13:46:27 UTC
*** Bug 323833 has been marked as a duplicate of this bug. ***
Comment 9 Halla Rempt 2013-08-31 07:56:47 UTC
Okay... Weirder still. I have rebuilt krita for x86 and x64 with MSVC 2012. The 32 bits (x86) build still shows the bug, the 64 bits build doesn't. So it wasn't the compiler...
Comment 10 Dmitry Kazakov 2013-09-26 12:49:33 UTC
Git commit 2f88b6419e50368dd5861461c3f3237251fe1899 by Dmitry Kazakov.
Committed on 26/09/2013 at 12:47.
Pushed by dkazakov into branch 'master'.

The copy constructor should also initialize the member variables ;)

The systemLocked variable was not initialized properly.

M  +5    -5    krita/image/kis_base_node.cpp

http://commits.kde.org/calligra/2f88b6419e50368dd5861461c3f3237251fe1899
Comment 11 Halla Rempt 2013-09-26 13:28:48 UTC
Git commit ab233a9be2abd775b082a9583978ec2eccfa7ff0 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 26/09/2013 at 12:47.
Pushed by rempt into branch 'calligra/2.7'.

The copy constructor should also initialize the member variables ;)

The systemLocked variable was not initialized properly.

M  +5    -5    krita/image/kis_base_node.cpp

http://commits.kde.org/calligra/ab233a9be2abd775b082a9583978ec2eccfa7ff0