The copy constructor should also initialize the member variables ;)

The systemLocked variable was not initialized properly.

BUG:293708